utec/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: utec
  labels:
    app: utec
spec:
  selector:
    app: utec
  ports:
  - port: 443
    targetPort: 443
  type: ClusterIP
